--- a/nlw-5-reactjs/podcastrnext/src/components/Player/styles.module.scss
+++ b/nlw-5-reactjs/podcastrnext/src/components/Player/styles.module.scss
@@ -1,33 +1,54 @@
-.playerContainer{
-    width: 26.5rem;
-    height: 100vh;
-    padding: 3rem 4rem;
-    background: var(--purple-500);
-    color: var(--white);
+.playerContainer {
+  padding: 3rem 4rem;
+  width: 26.5rem;
+  height: 100vh;
+  background: var(--purple-500);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  header {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    gap: 1rem;
+  }
 
-    header{
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-    }
-    
-    strong{
-        font-family: Lexend, sans-serif;
-        font-weight: 600;
-    
-    }
+  strong {
+    font-family: Lexand, sans-serif;
+    font-weight: 600;
+  }
 
-    footer{
-        align-self: stretch;
-        &.empty{
-            opacity: 0.5;
-        }
-    }
+  footer {
+    align-self: stretch;
 
+    &.empty {
+      opacity: 0.5;
+    }
+  }
+}
+
+.currentEpisode {
+  text-align: center;
+
+  img {
+    border-radius: 1.5rem;
+  }
+
+  strong {
+    display: block;
+    margin-top: 2rem;
+    font: 600 1.25rem Lexand, sans-serif;
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: block;
+    margin-top: 1rem;
+    opacity: 0.6;
+    line-height: 1.5rem;
+  }
 }
 
 .emptyPlayer{
@@ -81,13 +102,26 @@
         background: transparent;
         border: 0;
         font-size: 0;
+        transition: filter 0.2s;
+
+        &:disabled {
+          cursor: default;
+        }
+    
+        &:hover:not(:disabled) {
+          filter: brightness(0.7)
+        }
 
         &playButton{
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background: var(--purple-400);
+            transition: filter 0.2s;
+        }
 
+        &:hover {
+            filter: brightness(0.95)
         }
     }
 }
